Enviando mensagem como string

--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>jbrcap-aws</name>
 	<comment></comment>
 	<projects>
+		<project>processa-venda</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
