--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,13 @@
 	        <optional>false</optional>
 	        <version>1.11.435</version>
 	    </dependency>
+	    <!-- https://mvnrepository.com/artifact/software.amazon.awssdk/aws-sdk-java -->
+		<dependency>
+		    <groupId>software.amazon.awssdk</groupId>
+		    <artifactId>aws-sdk-java</artifactId>
+		    <version>2.0.6</version>
+		</dependency>
+	    
 	    <!-- https://mvnrepository.com/artifact/org.json/json -->
 		<dependency>
 		    <groupId>org.json</groupId>
